Time Display Deployed

--- a/intro.html
+++ b/intro.html
@@ -49,6 +49,10 @@
                 <li>
                     <a href="practice_java.html" target="_blank"> Practice - JavaScript</a>
                 </li>
+
+                <li>
+                    <a href="practice_api.html" target="_blank"> Practice - API/JavaScript</a>
+                </li>
             </ul>
 
         </div>
