--- a/practice_api.html
+++ b/practice_api.html
@@ -27,7 +27,7 @@
                     </p>
                 </div>   
                 <div class="roundBorderContainer" id="blurredTimeContainter">
-                    <div class="timeTitle"> UK Current Time </div>
+                    <div class="timeTitle"> Current Time </div>
                     <div class="timeInfoContainer">
                         <img class="timeIcon" src="./img/sun_rise.png" data-current-icon>
                         <div class="time"> 12:35:46 </div>
